--- a/presentation/ckm_slides.tex
+++ b/presentation/ckm_slides.tex
@@ -113,10 +113,10 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 %----------------------------------------------------------------------------------------
 
 %------------------------------------------------
-\section{Introduction} 
+\section{Einführung} 
 %------------------------------------------------
 
-\subsection{Linearly separable data classes}
+\subsection{Veröffentlichungen in der amtlichen Statistik}
 
 \begin{frame}{}
     \frametitle{Linearly separable data classes}
@@ -133,36 +133,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 
 
 %------------------------------------------------
-\subsection{Similarity, dot product and vector norm}
-
-\begin{frame}{}
-    \frametitle{Similarity}
-    To perform a classification, a similarity measure is needed. Finding a suitable measure is a core problem of machine learning. For now let's consider 
-    \begin{equation}
-        \begin{aligned}
-            k: \mathcal{X} \times \mathcal{X} & \rightarrow \mathbb{R} \\
-            (x, x') & \mapsto k(x, x')
-        \end{aligned}
-    \end{equation}
-    where $k$ is a function that, given two patterns $x$ and $x'$, returns a real number characterizing their similarity. This function $k$ is called a \textbf{kernel}. Unless stated otherwise, $k(x, x') = k(x', x)$.
-\end{frame}
-
-
-\begin{frame}{}
-    \frametitle{Dot product and vector norm}
-    A simple type of similarity measure is a \textbf{dot product}. Given two vectors $x, x' \in \mathbb{R}^n$ the canonical dot product is defined as
-    \begin{equation}
-        \langle x,x' \rangle = (x')^T x = \sum_{i = 1}^{n} [x]_i [x']_i,
-    \end{equation}
-    where $\left[x\right]_i$ denotes the $i$th entry of $x$. Futhermore this allows a calculation of the \textbf{norm} (length) of a single vector $x$ as 
-    \begin{equation}
-        \left\lVert x \right\rVert = \sqrt{\langle x,x \rangle}.
-    \end{equation}
-\end{frame}
-
-
-%------------------------------------------------
-\subsection{Hyperplane classifiers - Solving an optimization problem}
+\subsection{Warum ist Geheimhaltung notwendig?}
 
 \begin{frame}{}
     \frametitle{Hyperplane classifiers}
@@ -191,85 +162,11 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 \end{frame}
 
 
-\begin{frame}{}
-    \frametitle{Hyperplane classifiers - Lagrangian}
-    The constrained optimization problem in \eqref{eq:1} can be re-written using the method of Lagrange multipliers. This leads to the Lagrangian
-    \begin{equation} \label{eq:2}
-        L(w,b,\alpha) = \frac{1}{2} \lVert w \rVert^2 - \sum_{i=1}^{m} \alpha_i \left( y_{i} \left( \langle w,x \rangle + b \right) - 1 \right)
-    \end{equation}
-    subject to $\alpha_i \geq 0 \text{ } \forall i = {1, \dots, m}$. Here, $\alpha_i$ are the Lagrange multipliers. The Lagrangian $L$ has to be minimized with respect to the primal variables $w$ and $b$ and maximized with respect to the dual variables $\alpha_i$ (in other words, a saddle point has to be found).
-\end{frame}
-
-
-\begin{frame}{}
-    \frametitle{Hyperplane classifiers - KKT conditions}
-    The Karush-Kuhn-Tucker (KKT) complementarity conditions of optimization theory state, that at the saddle point, the derivatives of $L$ with respect to the
-    primal variables must vanish, so
-    \begin{equation}
-        \frac{\partial}{\partial b} L(w,b,\alpha) = 0 \text{ and } \frac{\partial}{\partial w} L(w,b,\alpha) = 0
-    \end{equation}
-    leads to
-    \begin{equation} \label{eq:3}
-        \sum_{i=1}^{m} \alpha_i y_i = 0 \text{ and } w = \sum_{i=1}^{m} \alpha_i y_i x_i.
-    \end{equation}
-    The solution vector $w$ thus has an expansion in terms of a subset of the training patterns, namely those patterns with non-zero $\alpha_i$, called Support Vectors (SVs).
-\end{frame}
-
-
-\begin{frame}{}
-    \frametitle{Hyperplane classifiers - Dual optimization problem}
-    We can again re-write our optimization problem by substituting \eqref{eq:3} into the Lagrangian \eqref{eq:2} to eliminate the primal variables. This yields the dual optimization problem, which is usually solved in practice
-    \begin{equation} \label{eq:4}
-        \begin{aligned}
-            \max_{\alpha \in \mathbb{R}^m} \quad & W(\alpha) = \sum_{i=1}^{m} \alpha_i - \frac{1}{2} \sum_{i,j=1}^{m} \alpha_i \alpha_j y_i y_j \langle x_i,x_j \rangle \\
-            \textrm{subject to} \quad & \alpha_i \geq 0 \text{ } \forall i = {1, \dots, m} \text{ and } \sum_{i=1}^{m} \alpha_i y_i = 0. 
-        \end{aligned}
-    \end{equation}
-    The dual optimization problem \eqref{eq:4} is a \textbf{convex quadratic programming problem} and therefore can be solved by using standard optimization techniques.
-\end{frame}
-
-
-\begin{frame}{}
-    \frametitle{Hyperplane classifiers - Dual optimization problem}
-    Finally, the decision function can be re-written using \eqref{eq:3} as
-    \begin{equation} \label{eq:5}
-        f(x) = sgn \left( \sum_{i=1}^{m} \alpha_i y_i \langle x,x_i \rangle + b \right),
-    \end{equation}
-    where $b$ can be computed by exploiting $\alpha_i \left[ y_i \left( \langle x_i,w \rangle + b \right) - 1 \right] = 0$, which follows from the KKT conditions. \\~\\
-    Details on mathematical optimization and convex constrained problems can be found in \cite{Jarre}. Explanations on dealing with nonlinear problems are given in \cite{Reinhardt}.
-\end{frame}
-
-
-
-
 %------------------------------------------------
-\subsection{Limitations}
-
-\begin{frame}{}
-	\frametitle{Soft Margin Hyperplanes}
-	We introduce a slack variable
-	\begin{equation}
-		\xi_{ i } \geq 0 \text{ } \forall i = {1, \dots, m}
-	\end{equation}
-	in the simplest case, this leads to 
-	\begin{equation}
-		\begin{aligned}
-			\min_{w \in \mathcal{H}, \xi \in \mathbb{R}^{n}} \quad & \tau (w, \xi) = \frac{1}{2} \lVert w \rVert^2 + \frac{C}{m} \sum_{i=1}^{m} \xi_{i} \\
-			\textrm{subject to} \quad & y_{i} \left( \langle w,x \rangle + b \right) \geq 1 - \xi_{i} \text{ } \forall i = {1, \dots, m}. 
-		\end{aligned}
-	\end{equation}
-    By making $\xi_{i}$ large enough, the constraint can always be met, which is why we penalize them in the objective function with $\frac{C}{m}$, where $C \in \mathbb{R}$ is a regularization parameter.
-\end{frame}
-
-
-
-
-
-%------------------------------------------------
-\section{Nonlinear SVMs}
+\section{Etablierte Geheimhaltungsverfahren}
 %------------------------------------------------
 
-\subsection{The kernel trick}
+\subsection{Posttabulare Verfahren}
 
 \begin{frame}{}
 	\frametitle{The kernel trick}
@@ -289,7 +186,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 
 
 %------------------------------------------------
-\subsection{Solving non linearly separable classification problems}
+\subsection{Pretabulare Verfahren}
 
 \begin{frame}{}
 	\frametitle{A suitable kernel}
@@ -303,7 +200,8 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 
 
 %------------------------------------------------
-\section{More kernel applications}
+\section{Cell Key Methode}
+%------------------------------------------------
 
 \begin{frame}{}
 	\frametitle{More kernel applications}
@@ -318,8 +216,21 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
         \item Kernel principal component analysis
     \end{itemize}
 \end{frame}
-%------------------------------------------------
 
+
+%------------------------------------------------
+\subsection{Methodik}
+
+%------------------------------------------------
+\subsection{Beispiel Implementierung}
+
+%------------------------------------------------
+\subsection{Anwendung in der Hochschulstatistik}
+
+
+%------------------------------------------------
+\section{Fazit}
+%------------------------------------------------
 
 
 %------------------------------------------------
