Updated slides and example code

--- a/src/ckm.ipynb
+++ b/src/ckm.ipynb
@@ -412,7 +412,8 @@
     "        else:\n",
     "            overlay_value = vector[-1]\n",
     "\n",
-    "        overlay_value = np.random.choice([overlay_value, 0], size=1, p=[1 - p0, p0])[0]\n",
+    "        if p0 is not None:\n",
+    "            overlay_value = np.random.choice([overlay_value, 0], size=1, p=[1 - p0, p0])[0]\n",
     "        overlay_col.append(overlay_value)\n",
     "\n",
     "    return overlay_col"
