--- a/presentation/ckm_slides.tex
+++ b/presentation/ckm_slides.tex
@@ -15,7 +15,7 @@
 %	PACKAGES AND THEMES
 %----------------------------------------------------------------------------------------
 
-\documentclass{beamer}
+\documentclass[aspectratio=169]{beamer}
 
 \mode<presentation> {
 
@@ -103,7 +103,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 \end{frame}
 
 \begin{frame}
-\frametitle{Overview} % Table of contents slide, comment this block out to remove it
+\frametitle{Inhalt} % Table of contents slide, comment this block out to remove it
 \tableofcontents % Throughout your presentation, if you choose to use \section{} and \subsection{} commands, these will automatically be printed on this slide as an overview of your presentation
 \end{frame}
 
@@ -119,16 +119,11 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 \subsection{Veröffentlichungen in der amtlichen Statistik}
 
 \begin{frame}{}
-    \frametitle{Linearly separable data classes}
-    First, let's consider a given data set $\mathcal{X}$ of labeled points (inputs) with individual labels $y_i \in \left\{ -1,1 \right\}$, e.g. $(x_1,y_1), ..., (x_m, y_m) \in \mathcal{X} \times \left\{ -1,1 \right\}$. \\~\\
-    
-    Our goal is to implement a classification method, which is able to classify new and unlabeld data points with the right or 'best' label. \\~\\
-\end{frame}
-
-
-\begin{frame}{}
-    \frametitle{Linearly separable data classes}
-    In machine learning, a well established classification method are the so called \textbf{Support Vector Machines} (SVM). Developed by Vladimir Vapnik and his coworkers in the 1990s, SVMs are still a relevent topic and an even more powerful tool for \textbf{classification} and \textbf{regression}.
+    \frametitle{Veröffentlichungen in der amtlichen Statistik}
+    \begin{itemize}
+        \item Das Ziel der amtlichen Statistik ist die Veröffentlichung von aufbereiteten Information und Daten für Bürger und andere Institutionen
+        \item Ein Großteil dieser Veröffentlichungen sind selbst (oder beinhalten) statistische Tabellen aus den amtlichen Daten
+    \end{itemize}
 \end{frame}
 
 
@@ -136,18 +131,325 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 \subsection{Warum ist Geheimhaltung notwendig?}
 
 \begin{frame}{}
-    \frametitle{Hyperplane classifiers}
-    The underlying learning algorithm of SVMs yields to find a hyperplane in some dot product space $\mathcal{H}$, which separates the data. A hyperplane of the form
-    \begin{equation}
-        \langle w,x \rangle + b = 0
-    \end{equation}
-    where $w \in \mathcal{H}, b \in \mathbb{R}$ shall be considered \cite{Schoelkopf} (p. 11). Futhermore decision functions 
-    \begin{equation}
-        f(x) = sgn \left( \langle w,x \rangle + b \right)
-    \end{equation}
-    can be assigned.
+    \frametitle{Warum ist Geheimhaltung notwendig? - I}
+    \begin{itemize}
+        \item Im deutschen Grundgesetz beschreibt Artikel 2 die Grundlage für ein Recht auf \textbf{informationelle Selbstbestimmung} - das Fundament unseres modernen Datenschutzes
+        \item Die amtliche Statistik kommt dieser Verantwortung mit dem \textbf{Statistikgeheimnis} (§ 16 Abs. 1 Satz 1 BStatG) nach: \\
+        \textit{„Einzelangaben über persönliche und sachliche Verhältnisse, die für eine Bundesstatistik
+        gemacht werden, sind von den Amtsträgern und für den öffentlichen Dienst besonders
+        Verpflichteten, die mit der Durchführung von Bundesstatistiken betraut sind, geheim zu halten,
+        soweit durch besondere Rechtsvorschrift nichts anderes bestimmt ist.“}
+    \end{itemize}
 \end{frame}
 
+
+\begin{frame}{}
+    \frametitle{Warum ist Geheimhaltung notwendig? - II}
+    Konkret möchte man mit der statistischen Geheimhaltung die Folgende Punkte bedienen (nach Begründung zum BStatG; BT-Drucks. Nr. 10/5345 vom 17. April 1986):
+    \begin{itemize}
+        \item Schutz von einzelnen Personen und Entitäten vor der Offenlegung ihrer sensitiven Daten
+        \item Aufrechterhaltung des Vertrauensverhältnisses zwischen den Befragten und den statistischen Ämtern und erhebenden Einrichtungen
+        \item Gewährleistung der Zuverlässigkeit der Angaben und der Berichswilligkeit der Befrageten
+    \end{itemize}
+\end{frame}
+
+
+\begin{frame}{}
+    \frametitle{Warum ist Geheimhaltung notwendig? - III}
+    An manche Stellen erlauben Ausnahmen, die Geheimhaltung auszusetzen. Hier sind beispielsweise die folgenden Stellen betroffen:
+    \begin{itemize}
+        \item Wenn Befragte explizit einer Veröffentlichung von Einzelangaben zustimmen
+        \item Wenn sich Informationen aus allgemein zugänglichen Quellen von öffentlichen Stellen beziehen
+        \item Absolut anonyme Einzeldaten oder zusammengefasste Einzeldaten (statistischen Ergebnisse)
+        \item Weitere Ausnahmen zur behördlichen Übermittlung, Methodenentwicklung, Planungs- und Forschungszwecke sind über das BStatG geregelt
+    \end{itemize}
+\end{frame}
+
+
+%------------------------------------------------
+\section{Etablierte Geheimhaltungsverfahren}
+%------------------------------------------------
+
+\begin{frame}{}
+	\frametitle{Etablierte Geheimhaltungsverfahren}
+    \begin{center}
+        \huge Etablierte Geheimhaltungsverfahren
+    \end{center}
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{Etablierte Geheimhaltungsverfahren}
+    Bei den verfügbaren Geheimhaltungsverfahren unterscheidt man zunächst zwischen:
+    \begin{itemize}
+        \item \textbf{Informationsreduzierende Methoden}: Hier werden durch Aggregation (Zusammenfassen) oder Sperrung/Löschung kritischer Kategrorien oder Werte die Aufdeckungsrisiken verhindert.
+        \item \textbf{Datenverändernde Methoden}: Hier werden durch gezielte Veränderungen der Daten - z.B. durch Runden oder Zufallsüberlagerungen - kritsiche Werte verfälscht.
+    \end{itemize}
+\end{frame}
+
+
+%------------------------------------------------
+\subsection{Pre-tabulare und post-tabulare Verfahren}
+
+\begin{frame}
+    \frametitle{Pre-tabulare und post-tabulare Verfahren}
+    Weiter unterscheidt man Geheimhaltungsverfahren auch nach dem Zeitpunkt ihrer Durchführung:
+    \begin{itemize}
+        \item \textbf{Pre-tabulare Verfahren}: Bei diesen Verfahren spricht man oft auch von einer Anonymisierung, da die Daten bereits vor der Tabellierung so verändert werden, dass keine kritschen Ergebnisse resultieren. Oftmals ist diese Art von Geheimhaltung aber nicht ausreichend, weshalb wetiere Verfahren im Anschluss angewandt werden müssen.
+        \item \textbf{Post-tabulare Verfahren}: Diese Verfahren werden erst im Anschluss an die Tabellierung der Daten angewandt.
+    \end{itemize}
+\end{frame}
+
+
+%------------------------------------------------
+\subsection{Häufigkeits- und Wertetabellen}
+
+\begin{frame}
+    \frametitle{Häufigkeits- und Wertetabellen - I}
+    Maßgebend für die Anwendung eines Geheimhaltungsverfahren ist die Art der zu veröffentlichenden Tabelle, die vorliegt. Man unterscheidet zwischen:
+    \begin{itemize}
+        \item \textbf{Häufigkeitstabellen}: Stellen Häufigkeiten oder Fallzahlen dar, z.B. Anzahl von Frauen und Männern innerhalb einer Universität.
+        \item \textbf{Wertetabellen}: Stellen Wertesummen dar, z.B. Umsätze.
+    \end{itemize}
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{Häufigkeits- und Wertetabellen - II}
+    Für diese beiden Tabellentypen stehen eine Reihe an Geheimhaltungsregeln zur Verfügung, die beschreiben, wenn ein Geheimhaltungsverfahren angewandt werden muss.
+    \begin{center}
+        \begin{tabular}{ r r }
+         \textbf{Tabellenart} \vline & \textbf{Geheimhaltungsregeln} \\ 
+         \hline
+         \textbf{Häufigkeitstabellen} \vline & Mindestfallzahlregel, Randwertregel \\  
+         \vline & \\
+         \hline
+         \textbf{Wertetabellen} \vline & Dominanzz-Konzentrationsregeln:  \\
+         \vline & $(1,k)$-Regel, $2,(k)$-Regel, $p$\%-Regel, \\
+         \vline & Fallzahlregel
+        \end{tabular}
+    \end{center}
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{Häufigkeits- und Wertetabellen - II}
+    Für diese beiden Tabellentypen stehen eine Reihe an Geheimhaltungsregeln zur Verfügung, die beschreiben, wenn ein Geheimhaltungsverfahren angewandt werden muss.
+    \begin{center}
+        \begin{tabular}{ r r }
+         \textbf{Tabellenart} \vline & \textbf{Geheimhaltungsregeln} \\ 
+         \hline
+         \textbf{Häufigkeitstabellen} \vline & \textcolor{blue}{Mindestfallzahlregel}, Randwertregel \\  
+         \vline & \\
+         \hline
+         \textbf{Wertetabellen} \vline & Dominanzz-Konzentrationsregeln:  \\
+         \vline & $(1,k)$-Regel, $2,(k)$-Regel, \textcolor{blue}{$p$\%-Regel}, \\
+         \vline & Fallzahlregel
+        \end{tabular}
+    \end{center}
+    Die in \textcolor{blue}{blau} gekennzeichneten Verfahren werden hier genauer beleuchtet.
+\end{frame}
+
+
+%------------------------------------------------
+\subsection{Ausgewählte Verfahren}
+
+\begin{frame}
+    \frametitle{Mindestfallzahlregel}
+    \begin{theorem}[Mindestfallzahlregel]
+        Ein Tabellenfeld bzw. eine Zelle $c$ wird genau dann geheim gehalten, wenn weniger als $n$ Einheiten darin enthalten sind, also $c < n$ gilt.
+    \end{theorem}
+    In vielen Statistiken wird $n = 3$ gewählt, d.h. Zellenwerte kleiner als $3$ drüfen nicht veröffentlicht werden.
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{Mindestfallzahlregel - Zellsperrung - I}
+    Nach Feststellung der kritischen Werte in einer Häufigkeitstabelle, kann ein Geheimhaltungsverfahren angewandt werden. Die verbreiteste Methode ist dabei die Zellsperrung.
+    \begin{theorem}[Zellsperrung]
+        Die Zellsperrung setzt sich aus zwei Schritten zusammen:
+        \begin{enumerate}
+            \item \textbf{Primärsperrung}: Die anhand der Mindestfallzahlregel ermittelten kritsichen Werte werden durch ein "x" ersetzt.
+            \item \textbf{Sekundärsperrung}: Um Rückrechnungen zu vermeiden, werden 3 weitere Zellen der Tabelle mit "x" ersetzt.
+        \end{enumerate}
+    \end{theorem}
+    Beim Ersetzen eines Tabellenfeldes durch "x" spricht man auch von einer Sperrung oder Zellsperrung.
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{Mindestfallzahlregel - Zellsperrung - II}
+    Folgendes Beispiel soll die Anwendung der Zellsperrung illustieren. \\
+    \textcolor{red}{Anwendung der Mindestfallzahlregel für $n = 3$}
+    \begin{center}
+        \begin{tabular}{ r r r r }
+         \textbf{Studienfach} \vline & \textbf{männlich} & \textbf{weilich} & \textbf{insgesamt} \\ 
+         \hline
+         Bauingenieurwesen \vline & $4$ & $3$ & $7$ \\
+         Informatik \vline & $9$ & $12$ & $21$ \\  
+         Medizin \vline & $4$ & $\textcolor{red}{1}$ & $5$ \\
+         Survey Statistik \vline & $10$ & $10$ & $20$ \\
+         \hline
+         Gesamt \vline & $27$ & $26$ & $53$
+        \end{tabular}
+    \end{center}
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{Mindestfallzahlregel - Zellsperrung - III}
+    Folgendes Beispiel soll die Anwendung der Zellsperrung illustieren. \\
+    \textcolor{red}{Anwendung der Primärsperrung}
+    \begin{center}
+        \begin{tabular}{ r r r r }
+         \textbf{Studienfach} \vline & \textbf{männlich} & \textbf{weilich} & \textbf{insgesamt} \\ 
+         \hline
+         Bauingenieurwesen \vline & $4$ & $3$ & $7$ \\
+         Informatik \vline & $9$ & $12$ & $21$ \\  
+         Medizin \vline & $4$ & \textcolor{red}{x} & $5$ \\
+         Survey Statistik \vline & $10$ & $10$ & $20$ \\
+         \hline
+         Gesamt \vline & $27$ & $26$ & $53$
+        \end{tabular}
+    \end{center}
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{Mindestfallzahlregel - Zellsperrung - IV}
+    Folgendes Beispiel soll die Anwendung der Zellsperrung illustieren. \\
+    \textcolor{red}{Anwendung der Sekundärsperrung}
+    \begin{center}
+        \begin{tabular}{ r r r r }
+         \textbf{Studienfach} \vline & \textbf{männlich} & \textbf{weilich} & \textbf{insgesamt} \\ 
+         \hline
+         Bauingenieurwesen \vline & $\textcolor{red}{4}$ & $\textcolor{red}{3}$ & $7$ \\
+         Informatik \vline & $9$ & $12$ & $21$ \\  
+         Medizin \vline & $\textcolor{red}{4}$ & \textcolor{red}{x} & $5$ \\
+         Survey Statistik \vline & $10$ & $10$ & $20$ \\
+         \hline
+         Gesamt \vline & $27$ & $26$ & $53$
+        \end{tabular}
+    \end{center}
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{Mindestfallzahlregel - Zellsperrung - IV}
+    Folgendes Beispiel soll die Anwendung der Zellsperrung illustieren. \\
+    \textcolor{red}{Anwendung der Sekundärsperrung}
+    \begin{center}
+        \begin{tabular}{ r r r r }
+         \textbf{Studienfach} \vline & \textbf{männlich} & \textbf{weilich} & \textbf{insgesamt} \\ 
+         \hline
+         Bauingenieurwesen \vline & \textcolor{red}{x} & \textcolor{red}{x} & $7$ \\
+         Informatik \vline & $9$ & $12$ & $21$ \\  
+         Medizin \vline & \textcolor{red}{x} & \textcolor{red}{x} & $5$ \\
+         Survey Statistik \vline & $10$ & $10$ & $20$ \\
+         \hline
+         Gesamt \vline & $27$ & $26$ & $53$
+        \end{tabular}
+    \end{center}
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{$p$\%-Regel}
+    \begin{theorem}[$p$\%-Regel]
+        Ein Tabellenfeld bzw. eine Zelle $c$ wird genau dann geheim gehalten, wenn die Differenz $d$ zwischen dem Zellwert $c$ und dem zweitgrößten Beitrag $x_2$ den größten Beitrag $x_1$ um weniger als $p$\% übersteigt. Es gilt also 
+        \begin{align}
+            & d = c - x_2 < x_1 + \frac{p}{100} \cdot x_1 \\
+            \Leftrightarrow \: & c - x_2 - x_ 1 <  \frac{p}{100} \cdot x_1.
+        \end{align}
+    \end{theorem}
+    Der Wert $p$ wird dabei statistikspezifisch festgelegt.
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{$p$\%-Regel - Beispiel - I}
+    Die $p$\%-Regel soll am folgenden Beispiel illustieren werden. Gegeben seinen die Umsätze von drei verschiedenen (fiktiven) Bamberger Bierbrauereien.
+    \begin{center}
+        \begin{tabular}{ r r r r r }
+            \textbf{Brauerei} \vline & \textbf{Mährs Bräu} & \textbf{Schinkerla} & \textbf{Käsmann} & \textbf{Gesamt} \\ 
+            \hline
+            Umsatz \vline & $600.000$ & $50.000$ & $250.000$ & $900.000$
+           \end{tabular}
+    \end{center}
+    Die Anwendung der $p$\%-Regel mit $p = 10 \%$ und Zellenwert $c = 600.000$ liefert hier:
+    \begin{itemize}
+        \item Größter Beitrag $x_1 = 600.000$
+        \item Zweitgrößter Beitrag $x_2 = 250.000$
+    \end{itemize}
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{$p$\%-Regel - Beispiel - II}
+    Die $p$\%-Regel soll am folgenden Beispiel illustieren werden. Gegeben seinen die Umsätze von drei verschiedenen (fiktiven) Bamberger Bierbrauereien.
+    \begin{center}
+        \begin{tabular}{ r r r r r }
+            \textbf{Brauerei} \vline & \textbf{Mährs Bräu} & \textbf{Schinkerla} & \textbf{Käsmann} & \textbf{Gesamt} \\ 
+            \hline
+            Umsatz \vline & $600.000$ & $50.000$ & $250.000$ & $900.000$
+           \end{tabular}
+    \end{center}
+    Die Anwendung der $p$\%-Regel mit $p = 10 \%$ und Zellenwert $c = 600.000$ liefert hier:
+    \begin{itemize}
+        \item Größter Beitrag $x_1 = 600.000$
+        \item Zweitgrößter Beitrag $x_2 = 250.000$
+    \end{itemize}
+    \begin{align}
+        & c - x_2 - x_ 1 <  \frac{p}{100} \cdot x_1 \\
+        \Leftrightarrow \: & 900.000 - 250.000 - 600.000 < \frac{10}{100} \cdot 600.000 \\
+        \Leftrightarrow \: & 50.000 < 60.000
+    \end{align}
+    Es folgt, dass der Zellenwert $c$ geheimgehalten werden muss.
+\end{frame}
+
+
+%------------------------------------------------
+\section{Cell Key Methode}
+%------------------------------------------------
+
+\begin{frame}{}
+	\frametitle{Cell Key Methode}
+    \begin{center}
+        \huge Cell Key Methode
+    \end{center}
+\end{frame}
+
+
+%------------------------------------------------
+\subsection{Methodik}
+
+\begin{frame}{}
+	\frametitle{Cell Key Methode - Facts}
+    \begin{itemize}
+        \item Die bislang gezeigten Geheimhaltungsverfahren müssen in der Regel - zumindest bis zu einem gewissen Grad - \textbf{manuell} durchgeführt werden und eine Automatisierung ist eher unfelxibel.
+        \item Mit der \textbf{Cell Key Methode (CKM)} wird ein Geheimhaltungsverfahren präsentiert, welches gut zu automatisieren und vergleichsweise einfach zu implementieren ist.
+        \item Die Cell Key Methode ist auch als \textbf{ABS-Verfahren} bekannt. Der Name stammt von der schöpfenden Institutuion des Verfahrens, dem Australian Bureau of Statistics, ab.
+        \item Durch die Verwendung von \textbf{zufallsbasierten Additionen} (sog. Überlagerungen) werden Datenwerte verschleiert. 
+        \item Die CKM zählt damit zu den \textbf{datenverändernde Verfahren}.
+    \end{itemize}
+\end{frame}
+
+
+\begin{frame}{}
+	\frametitle{Cell Key Methode - Algorithmus}
+\end{frame}
+
+
+%------------------------------------------------
+\subsection{Beispiel Implementierung}
+
+%------------------------------------------------
+\subsection{Anwendung in der Hochschulstatistik}
+
+
+%------------------------------------------------
+\section{Fazit}
+%------------------------------------------------
 
 \begin{frame}{}
     \frametitle{Hyperplane classifiers - A constrained optimization problem}
@@ -162,32 +464,6 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 \end{frame}
 
 
-%------------------------------------------------
-\section{Etablierte Geheimhaltungsverfahren}
-%------------------------------------------------
-
-\subsection{Posttabulare Verfahren}
-
-\begin{frame}{}
-	\frametitle{The kernel trick}
-	To extend the introduced SVM algorithm, we can substitute \eqref{eq:5} by applying a kernel of the form
-    \begin{equation}
-        k(x,x') = \langle \Phi (x), \Phi (x') \rangle
-    \end{equation}
-    where 
-    \begin{equation}
-        \begin{aligned}
-            \Phi: \mathcal{X} & \rightarrow \mathcal{H} \\
-            (x) & \mapsto \Phi (x)
-        \end{aligned}
-    \end{equation}
-    is a function that maps an input from $ \mathcal{X} $ into a dot product space $ \mathcal{H} $. This is referred to as the \textbf{kernel trick}.
-\end{frame}
-
-
-%------------------------------------------------
-\subsection{Pretabulare Verfahren}
-
 \begin{frame}{}
 	\frametitle{A suitable kernel}
 	Going back to our problem of non linearly separable data, we can use a kernel function of the form
@@ -196,41 +472,6 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
     \end{equation}
     a so called \textbf{Gaussian radial basis function} (GRBF or RBF kernels) with $ \sigma > 0$.
 \end{frame}
-
-
-
-%------------------------------------------------
-\section{Cell Key Methode}
-%------------------------------------------------
-
-\begin{frame}{}
-	\frametitle{More kernel applications}
-    Some interessting kernel applications:
-    \begin{itemize}
-        \item Image recognition/classification (with SVMs) for example in 
-            \begin{itemize}
-                \item Handwriting recognition
-                \item Tumor detection
-            \end{itemize}
-        \item Computer vision and computer graphics, 3D reconstruction
-        \item Kernel principal component analysis
-    \end{itemize}
-\end{frame}
-
-
-%------------------------------------------------
-\subsection{Methodik}
-
-%------------------------------------------------
-\subsection{Beispiel Implementierung}
-
-%------------------------------------------------
-\subsection{Anwendung in der Hochschulstatistik}
-
-
-%------------------------------------------------
-\section{Fazit}
-%------------------------------------------------
 
 
 %------------------------------------------------
