--- a/src/ckm.ipynb
+++ b/src/ckm.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "9    Muenchen   m    0.046450"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
        "4   Wuerzburg   m      3        1.853099"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
        "4   Wuerzburg   m      3        1.853099              1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
        "4   Wuerzburg   m      3        1.853099              0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
        "4   Wuerzburg   m      3        1.853099              1"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -818,8 +818,8 @@
        "      <td>w</td>\n",
        "      <td>1</td>\n",
        "      <td>0.139494</td>\n",
+       "      <td>-1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -827,8 +827,8 @@
        "      <td>m</td>\n",
        "      <td>3</td>\n",
        "      <td>1.005227</td>\n",
+       "      <td>-3</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -836,8 +836,8 @@
        "      <td>w</td>\n",
        "      <td>2</td>\n",
        "      <td>0.806379</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -855,13 +855,13 @@
       "text/plain": [
        "   university sex  count  record_key_sum  overlay_value  new_value\n",
        "0     Bamberg   m      1        0.199674             -1          0\n",
-       "1  Eichstaett   w      1        0.139494              0          1\n",
-       "2    Muenchen   m      3        1.005227              0          3\n",
-       "3    Muenchen   w      2        0.806379              0          2\n",
+       "1  Eichstaett   w      1        0.139494             -1          0\n",
+       "2    Muenchen   m      3        1.005227             -3          0\n",
+       "3    Muenchen   w      2        0.806379              1          3\n",
        "4   Wuerzburg   m      3        1.853099              1          4"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +870,7 @@
     "overlay_col = get_overlay_matrix_value(\n",
     "    OVERLAY_MATRIX, CHANGE_VECTOR, \n",
     "    table_data[\"count\"], table_data[\"record_key_sum\"], \n",
-    "    seed=42, p0=0.45\n",
+    "    seed=42, p0=0\n",
     ")\n",
     "\n",
     "result = table_data.copy()\n",
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +986,7 @@
        "4   Wuerzburg   m      4        1.853099"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1422,7 @@
        "12         sum   i   1001      503.616894"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1434,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1490,7 +1490,7 @@
        "      <th>9</th>\n",
        "      <td>Eichstaett</td>\n",
        "      <td>i</td>\n",
-       "      <td>46</td>\n",
+       "      <td>48</td>\n",
        "      <td>20.920485</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1518,21 +1518,21 @@
        "      <th>4</th>\n",
        "      <td>Muenchen</td>\n",
        "      <td>m</td>\n",
-       "      <td>258</td>\n",
+       "      <td>259</td>\n",
        "      <td>132.824413</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Muenchen</td>\n",
        "      <td>w</td>\n",
-       "      <td>235</td>\n",
+       "      <td>238</td>\n",
        "      <td>119.962881</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>Wuerzburg</td>\n",
        "      <td>i</td>\n",
-       "      <td>296</td>\n",
+       "      <td>293</td>\n",
        "      <td>148.044221</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1565,19 +1565,19 @@
        "8      Bamberg   i    168       81.864894\n",
        "0      Bamberg   m     75       37.445005\n",
        "1      Bamberg   w     91       44.419890\n",
-       "9   Eichstaett   i     46       20.920485\n",
+       "9   Eichstaett   i     48       20.920485\n",
        "2   Eichstaett   m     20        7.962167\n",
        "3   Eichstaett   w     32       12.958318\n",
        "10    Muenchen   i    494      252.787294\n",
-       "4     Muenchen   m    258      132.824413\n",
-       "5     Muenchen   w    235      119.962881\n",
-       "11   Wuerzburg   i    296      148.044221\n",
+       "4     Muenchen   m    259      132.824413\n",
+       "5     Muenchen   w    238      119.962881\n",
+       "11   Wuerzburg   i    293      148.044221\n",
        "6    Wuerzburg   m    136       64.781587\n",
        "7    Wuerzburg   w    161       83.262634\n",
        "12         sum   i   1001      503.616894"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1585,21 +1585,176 @@
    "source": [
     "overlayed_data2 = apply_ckm(\n",
     "    table_data2, OVERLAY_MATRIX, CHANGE_VECTOR,\n",
-    "    [\"count\"], [\"record_key_sum\"], seed=42, p=[0.45]\n",
+    "    [\"count\"], [\"record_key_sum\"], seed=42, p=[0]\n",
     ")\n",
     "overlayed_data2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>university</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>count</th>\n",
+       "      <th>original</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Bamberg</td>\n",
+       "      <td>i</td>\n",
+       "      <td>168</td>\n",
+       "      <td>166</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bamberg</td>\n",
+       "      <td>m</td>\n",
+       "      <td>75</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bamberg</td>\n",
+       "      <td>w</td>\n",
+       "      <td>91</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Eichstaett</td>\n",
+       "      <td>i</td>\n",
+       "      <td>48</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Eichstaett</td>\n",
+       "      <td>m</td>\n",
+       "      <td>20</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Eichstaett</td>\n",
+       "      <td>w</td>\n",
+       "      <td>32</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Muenchen</td>\n",
+       "      <td>i</td>\n",
+       "      <td>494</td>\n",
+       "      <td>493</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Muenchen</td>\n",
+       "      <td>m</td>\n",
+       "      <td>259</td>\n",
+       "      <td>258</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Muenchen</td>\n",
+       "      <td>w</td>\n",
+       "      <td>238</td>\n",
+       "      <td>235</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Wuerzburg</td>\n",
+       "      <td>i</td>\n",
+       "      <td>293</td>\n",
+       "      <td>296</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Wuerzburg</td>\n",
+       "      <td>m</td>\n",
+       "      <td>136</td>\n",
+       "      <td>135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Wuerzburg</td>\n",
+       "      <td>w</td>\n",
+       "      <td>161</td>\n",
+       "      <td>161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>sum</td>\n",
+       "      <td>i</td>\n",
+       "      <td>1001</td>\n",
+       "      <td>1001</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    university sex  count  original\n",
+       "8      Bamberg   i    168       166\n",
+       "0      Bamberg   m     75        75\n",
+       "1      Bamberg   w     91        91\n",
+       "9   Eichstaett   i     48        46\n",
+       "2   Eichstaett   m     20        17\n",
+       "3   Eichstaett   w     32        29\n",
+       "10    Muenchen   i    494       493\n",
+       "4     Muenchen   m    259       258\n",
+       "5     Muenchen   w    238       235\n",
+       "11   Wuerzburg   i    293       296\n",
+       "6    Wuerzburg   m    136       135\n",
+       "7    Wuerzburg   w    161       161\n",
+       "12         sum   i   1001      1001"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "overlayed_data2[\"original\"] = table_data2[\"count\"]\n",
+    "overlayed_data2.drop(columns=(\"record_key_sum\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Summe der einzelnen Insgesamt-Spalten = 1004.\n"
+      "Summe der einzelnen Insgesamt-Spalten = 1003.\n"
      ]
     }
    ],
@@ -1610,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1727,7 +1882,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Muenchen</th>\n",
-       "      <td>493</td>\n",
+       "      <td>497</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Wuerzburg</th>\n",
@@ -1742,7 +1897,7 @@
        "university       \n",
        "Bamberg       166\n",
        "Eichstaett     52\n",
-       "Muenchen      493\n",
+       "Muenchen      497\n",
        "Wuerzburg     297"
       ]
      },
@@ -1765,10 +1920,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "d94057dd625ac0d96cd1659224390855609ebb5b60830888102aa63be1bf8118"
+   "hash": "5e4d4de3f47a5f25841b6536dd7347efbbbcd5d8c68ef97d9d1c7b056d29fa2d"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('dash')",
+   "display_name": "Python 3.9.7 ('tensorflow-metal')",
    "language": "python",
    "name": "python3"
   },
